--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,9 @@
 name: Run Python Script
 
 on:
-  schedule:
-    - cron: '0 */6 * * *'  # Menjadwalkan untuk menjalankan setiap 6 jam, sesuaikan sesuai kebutuhan
+  push:
+    branches:
+      - main  # atau nama branch lain yang Anda gunakan
 
 jobs:
   run-script:
